--- a/config/app_config.yml.sample
+++ b/config/app_config.yml.sample
@@ -4,7 +4,7 @@
 # ALL-ENVIRONMENT SETTINGS
 #
 time_zone: 'Central Time (US & Canada)'
-origin_url: 'yoururlhere'
+origin_url: 'https://yourorganizationhere.ccbchurch.com/api.php'
 origin_user: 'youruserhere'
 origin_passwd: 'yourpasswdhere'
 
