--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 # Ignore per-instance config.
 /.bundle
 /config/app_config.yml
+/config/deploy/production.rb
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
